--- a/software/server/dashboard/package.json
+++ b/software/server/dashboard/package.json
@@ -14,6 +14,7 @@
     "firebaseui": "^0.600.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
+    "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
