--- a/software/server/package.json
+++ b/software/server/package.json
@@ -1,12 +1,14 @@
 {
   "name": "frog-server",
   "dependencies": {
+    "@types/node-wifi": "^2.0.0",
     "@types/sqlite3": "^3.1.8",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "json5": "^2.2.1",
     "mobx": "^6.6.1",
+    "node-wifi": "^2.0.16",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.11",
     "uuid": "^8.3.2"
