--- a/.github/workflows/build_server+dashboard.yml
+++ b/.github/workflows/build_server+dashboard.yml
@@ -14,7 +14,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [14.x, 15.x, 16.x]
+        node-version: [14.x]
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
