--- a/.github/workflows/build_server+dashboard.yml
+++ b/.github/workflows/build_server+dashboard.yml
@@ -22,8 +22,8 @@ jobs:
       
       - name: Installs dependencies and builds both codebases
         run: |
-          npm ci
+          npm i
           npm run build
           cd dashboard
-          npm ci
+          npm i
           npm run build
