--- a/software/server/package.json
+++ b/software/server/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node build/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\"",
+    "build_all": "npm i && npm run build && cd dashboard && npm i && npm run build"
   }
 }
