--- a/software/installation/dnsmasq.conf
+++ b/software/installation/dnsmasq.conf
@@ -9,3 +9,4 @@ address=/clients1.google.com/192.168.12.1
 address=/clients3.google.com/192.168.12.1
 address=/connectivitycheck.android.com/192.168.12.1
 address=/connectivitycheck.gstatic.com/192.168.12.1
+address=/captive.apple.com/192.168.12.1
