--- a/software/server/package.json
+++ b/software/server/package.json
@@ -23,10 +23,10 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "build": "npx tsc",
-    "start": "node build/index.js",
+    "build": "npm version patch && npx tsc",
+    "start": "sudo node build/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\"",
     "build_all": "npm i && npm run build && cd dashboard && npm i && npm run build"
   },
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
